IT placeholders, refactor to support assuming identities
Signed-off-by: Peter Nied <petern@amazon.com>